--- a/WebApplication4/WebApplication4/Views/Categoria/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Categoria/Edit.cshtml
@@ -47,14 +47,14 @@
                 </div>
             </div>-->
             <div class="form-group">
-                @Html.LabelFor(model => model.idCatPadre, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.idCatPadre, new { @class = "control-label col-md-3" })
+                <div class="col-md-5">
                     @Html.DropDownListFor(model => model.idCatPadre, @ViewBag.CatID as SelectList, "Categoria", new { @class = "form-control" })
                 </div>
             </div><br><br>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Aceptar" class="btn btn-default" />
+                <div class="col-md-offset-4 col-md-5">
+                    <input type="submit" value="Aceptar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
