--- a/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/BloquesTiempoVenta.cshtml
@@ -69,7 +69,7 @@
                             </tbody>
                         </table><br>
                     </div><br>
-                    <button type="submit" class="btn btn-primary" style="float: right;" onclick="guardarBloques()">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
+                    <button type="submit" class="btn btn-primary" style="float: right;" onclick="return guardarBloques()">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
                 </div>
             </div>
         }
