--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -212,7 +212,7 @@
 
         var ddProv = $("#idSubCat");
         var catId = parseInt($("#idCategoria").val());
-        alert(catId);
+        //alert(catId);
         if (isNaN(depId)) return;
         $.ajax({
             url: '/Services/Subcategoria/',
