--- a/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
@@ -28,7 +28,14 @@
                 @Html.ValidationMessageFor(model => model.fechaFin)
                 
             </div>
-
+            @if (!string.IsNullOrEmpty(ViewBag.NoPeriodo))
+            {
+                <div class="error">@ViewBag.NoPeriodo</div>
+            }
+            @if (!string.IsNullOrEmpty(ViewBag.ErrorPeriodo))
+            {
+                <div class="error">@ViewBag.ErrorPeriodo </div>
+            }
             <br>
             <div class="row form-inline">
                 <div class="control-label col-md-3">
