--- a/WebApplication4/WebApplication4/Views/Evento/ModificarEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ModificarEvento.cshtml
@@ -1,7 +1,7 @@
 ﻿@using WebApplication4.Models
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Modificar";
     var db = new inf245netsoft();
 }
 @model DatosGeneralesModel
