--- a/WebApplication4/WebApplication4/Views/Services/Subcategoria.cshtml
+++ b/WebApplication4/WebApplication4/Views/Services/Subcategoria.cshtml
@@ -4,6 +4,6 @@
     int catId = int.Parse(Request["catId"]);
     var data = from obj in db.Categoria
                where obj.idCatPadre == catId && obj.activo == 1 && obj.nivel == 2
-               select new { IdSCategoria = obj.idCatPadre, Nombre = obj.nombre };
+               select new { IdSCategoria = obj.idCategoria, Nombre = obj.nombre };
     Json.Write(data, Response.Output);
 }
