--- a/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
@@ -95,6 +95,7 @@
                         @Html.LabelFor(c => c.descripcion, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.TextAreaFor(c => c.descripcion, new { @class = "form-control", @rows = 8 })
+                            @Html.ValidationMessageFor(c => c.descripcion)
                         </div>
                     </div>
                 </div>
