mantenimientos search and editv2

--- a/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Email, new { @placeholder = @cuentaM.Email })
+                @Html.TextBoxFor(model => model.Email, new { @placeholder = @cuentaM.Email, @Value = @cuentaM.Email })
                 @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.nombre, new { @placeholder = @cuentaM.nombre })
+                @Html.TextBoxFor(model => model.nombre, new { @placeholder = @cuentaM.nombre, @Value = @cuentaM.nombre })
                 @Html.ValidationMessageFor(model => model.nombre)
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.apellido, new { @placeholder = @cuentaM.apellido })
+                @Html.TextBoxFor(model => model.apellido, new { @placeholder = @cuentaM.apellido, @Value = @cuentaM.apellido })
                 @Html.ValidationMessageFor(model => model.apellido)
             </div>
         </div>
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.direccion, new { @placeholder = @cuentaM.direccion })
+                @Html.TextBoxFor(model => model.direccion, new { @placeholder = @cuentaM.direccion, @Value = @cuentaM.direccion })
                 @Html.ValidationMessageFor(model => model.direccion)
             </div>
         </div>
@@ -59,7 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.telefono, new { @placeholder = @cuentaM.telefono })
+                @Html.TextBoxFor(model => model.telefono, new { @placeholder = @cuentaM.telefono, @Value = @cuentaM.telefono })
                 @Html.ValidationMessageFor(model => model.telefono)
             </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.telMovil, new { @placeholder = @cuentaM.telMovil })
+                @Html.TextBoxFor(model => model.telMovil, new { @placeholder = @cuentaM.telMovil, @Value = @cuentaM.telMovil })
                 @Html.ValidationMessageFor(model => model.telMovil)
             </div>
         </div>
