--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
@@ -25,7 +25,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.ubicacion, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.ubicacion, new { @placeholder = @puntoM.ubicacion})
+                    @Html.TextBoxFor(model => model.ubicacion, new { @placeholder = @puntoM.ubicacion, @Value = @puntoM.ubicacion})
                     @Html.ValidationMessageFor(model => model.ubicacion)
                 </div>
             </div>
@@ -33,7 +33,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.mac, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.mac, new { @placeholder = @puntoM.mac })
+                    @Html.TextBoxFor(model => model.mac, new { @placeholder = @puntoM.mac, @Value = @puntoM.mac })
                     @Html.ValidationMessageFor(model => model.mac)
                 </div>
             </div>
