--- a/WebApplication4/WebApplication4/Views/Organizador/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Organizador/Edit.cshtml
@@ -26,7 +26,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.nombre, new { @placeholder = @orgM.nombre })
+                    @Html.TextBoxFor(model => model.nombre, new { @placeholder = @orgM.nombre, @Value = @orgM.nombre })
                     @Html.ValidationMessageFor(model => model.nombre)
                 </div>
             </div>
@@ -34,7 +34,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.telefono, new { @placeholder = @orgM.telefono })
+                    @Html.TextBoxFor(model => model.telefono, new { @placeholder = @orgM.telefono, @Value = @orgM.telefono })
                     @Html.ValidationMessageFor(model => model.telefono)
                 </div>
             </div>
@@ -65,7 +65,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.codDoc, new { @placeholder = @orgM.codDoc })
+                    @Html.TextBoxFor(model => model.codDoc, new { @placeholder = @orgM.codDoc, @Value = @orgM.codDoc })
                     @Html.ValidationMessageFor(model => model.codDoc)
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.Email, new { @placeholder = @orgM.Email })
+                    @Html.TextBoxFor(model => model.Email, new { @placeholder = @orgM.Email, @Value = @orgM.Email })
                     @Html.ValidationMessageFor(model => model.Email)
                 </div>
             </div>
