--- a/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Cierre.cshtml
@@ -275,9 +275,9 @@
 <script>
     function cerrar() {
         var montos = $('#montoSolesR').val();
-        alert(montos);
+        //alert(montos);
         var montod = $('#dolaresR').val();
-        alert(montod);
+        //alert(montod);
         if (montos != "" && montos != null && montod != "" && montod != null) {
             //alert(monto);
             $.ajax({
