--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
@@ -8,8 +8,15 @@
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
     PuntoVenta punto = (PuntoVenta)Session["punto"];
     PuntoVentaModel puntoM = new PuntoVentaModel();
+    int idR = 0;
+    int idP = 0;
     puntoM.mac = punto.dirMAC;
+    idR = (int)punto.idRegion;
+    idP = (int)punto.idProvincia;
     puntoM.ubicacion = punto.ubicacion;
+    puntoM.idRegion = (int)punto.idRegion;
+    puntoM.idProv = (int)punto.idProvincia;
+    
 }
 
 
@@ -38,45 +45,21 @@
                 </div>
             </div>
 
+
             <div class="row form-group">
-                @Html.LabelFor(model => model.departamento, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @{
-        List<WebApplication4.Models.Region> listaDepartamento = db.Region.AsNoTracking().Where(c => c.idRegPadre == null).ToList();
-        IEnumerable<SelectListItem> listItems = (from a in listaDepartamento
-                                                 select new SelectListItem
-                                               {
-                                                   Value = a.idRegion.ToString(),
-                                                   Text = a.nombre,
-                                                   Selected = false
-                                               });
-                    }
-                    @{
-        listItems.First().Selected = true;
-                    }
-                    @Html.DropDownListFor(model => model.departamento, listItems, "Seleccione Departamento")
+                @Html.LabelFor(model => model.idRegion, new { @class = "control-label col-md-3" })
+                <div class="col-md-2">
+                    @Html.DropDownListFor(model => model.idRegion, @ViewBag.DepID as SelectList, "Departamento", new { @class = "form-control", @onchange = "cambioDepartamento()" })
                 </div>
             </div>
 
             <div class="row form-group">
-                @Html.LabelFor(model => model.provincia, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @{
-        List<WebApplication4.Models.Region> listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre != null).ToList();
-        IEnumerable<SelectListItem> listItems2 = (from a in listaProvincia
-                                                  select new SelectListItem
-                                                {
-                                                    Value = a.idRegion.ToString(),
-                                                    Text = a.nombre,
-                                                    Selected = false
-                                                });
-                    }
-                    @{
-        listItems2.First().Selected = true;
-                    }
-                    @Html.DropDownListFor(model => model.provincia, listItems2, "Seleccione Provincia")
+                @Html.LabelFor(model => model.idProv, new { @class = "control-label col-md-3" })
+                <div class="col-md-2">
+                    @Html.DropDownListFor(model => model.idProv, @ViewBag.ProvID as SelectList, "Provincia", new { @class = "form-control" })
                 </div>
             </div>
+
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
@@ -88,3 +71,31 @@
 </div>
 
 
+<input type="hidden" id="idRegT" value="@idR" />
+<input type="hidden" id="idProvT" value="@idP" />
+
+<script>
+    function cambioDepartamento() {
+        var depId = parseInt($("#idRegion").val());
+        if (!isNaN(depId)) {
+            var ddProv = $("#idProv");
+            ddProv.empty();
+            ddProv.append($("<option></option>").val("").html("Provincia"));
+            $.ajax({
+                url: "@Url.Action("Provincia","Services")",
+                data: { depId: depId },
+                datatype: "json",
+                success: function (data) {
+                    var obj = $.parseJSON(data);
+                    $.each(obj, function (k, v) {
+                        ddProv.append($("<option></option>").val(v.IdRegion).html(v.Nombre));
+                    });
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        }
+        ddProv.empty();
+    }
+</script>
