Cambios a ver evento para poder realizar una compra. Agregue lo necesario para poder restringir las vistas por roles. Modifique el link de ver evento para reflejar uno usando razor. Metodo para obtener mes segun el numero. Nada mas creo :v

--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -198,7 +198,7 @@ else
                                     @Html.AntiForgeryToken()
 
                                     <div class="nav navbar-nav navbar-right">
-                                        <font color="white" onclick="redirige()"> Hola @nombre!</font>
+                                        <font color="white" onclick="redirige()"> Hola @User.Identity.Name !</font>
                                         <a type="button" class="btn btn-default" href="javascript:document.getElementById('logoutForm').submit()">Salir <span class="glyphicon glyphicon-log-out"></span></a>
                                     </div>
                                 }
