--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -26,7 +26,8 @@
 
                         @for (var i = 0; i < listaDestacados.Count; i++ ){
                                     <div class="@((i==0)?"item active":"item ")">
-                                         <a href= @("Evento/VerEvento/?id="+listaDestacados[i].codigo)><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
+                                        
+                                        <a href=@Url.Action("VerEvento", "Evento", new { id = listaDestacados[i].codigo })><img src=@listaDestacados[i].ImagenDestacado height="500" width="1200" class="img-responsive" alt=@listaDestacados[i].nombre></a>
                                     </div>
                         }
 
